81. docker build with custom jre with jlink. docker image decreased from 950 to 160 megabytes